<resources>
    <string name="app_name">Quiz App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="total_questions">Total Questions : </string>
    <string name="correct_answers">Correct Answers(Score) : </string>
    <string name="wrong_answer">Wrong Answer : </string>
    <string name="your_score">Your Score is : </string>

    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="try_again">Try Again</string>
    <string name="result_analysis">Result Analysis</string>
    <string name="result">Result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_result">ResultActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>